<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/Home" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_explore_24"
        android:title="@string/Categories" />

    <!--    <item-->
    <!--        android:id="@+id/navigation_category"-->
    <!--        android:icon="@drawable/ic_baseline_menu_24"-->
    <!--        android:title="Thể Loại" />-->

<!--    <item-->
<!--        android:id="@+id/navigation_notifications"-->
<!--        android:icon="@drawable/ic_baseline_search_24"-->
<!--        android:title="@string/Search" />-->
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/kp" />
    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/Personal" />

</menu>