<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:orientation="vertical"
    tools:context=".fragments.AboutFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/CategoriesAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/backgroundColor"
            android:theme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dimen_20"
                android:gravity="center"
                android:text="Cá nhân"
                android:textColor="?attr/textColor"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/section_header" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/dimen_20">

            <RelativeLayout
                android:id="@+id/relativeLayoutRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/dimen_20">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/profiles" />


                <TextView
                    android:id="@+id/txtWelcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_10"
                    android:layout_toRightOf="@id/imgProfile"
                    android:text="Chào mừng bạn đến với TYT"
                    android:textColor="?attr/textColor"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtWelcome"
                    android:layout_marginLeft="@dimen/dimen_10"
                    android:layout_toRightOf="@id/imgProfile"
                    android:text="Đăng nhập/Đăng ký"
                    android:textSize="15dp"
                    android:visibility="gone" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_margin="@dimen/dimen_16"
                    android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                    android:visibility="gone" />
            </RelativeLayout>

            <!--            <TextView-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="20dp"-->
            <!--                android:paddingHorizontal="@dimen/dimen_20"-->
            <!--                android:text="Lịch sử tài khoản"-->
            <!--                android:textColor="@color/clmain" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:background="@drawable/section_header" />

            <LinearLayout
                android:id="@+id/linearStoryWatched"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/dimen_15">

                <ImageView
                    android:layout_width="@dimen/dimen_24"
                    android:layout_height="24dp"
                    android:layout_marginLeft="@dimen/dimen_20"
                    android:src="@drawable/clock" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_10"
                    android:layout_weight="8"
                    android:text="@string/seen"
                    android:textColor="?attr/textColor" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_15"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:layout_weight="2"
                    android:src="@drawable/next" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/big_line" />

            <!--            <TextView-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="20dp"-->
            <!--                android:paddingHorizontal="@dimen/dimen_20"-->
            <!--                android:text="Cài Đặt"-->
            <!--                android:textColor="@color/clmain" />-->


            <LinearLayout
                android:id="@+id/linearSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/dimen_15">


                <ImageView
                    android:layout_width="@dimen/dimen_24"
                    android:layout_height="@dimen/dimen_24"
                    android:layout_marginLeft="@dimen/dimen_20"
                    android:src="@drawable/interface_setting" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="8"
                    android:text="@string/interfaceSetting"
                    android:textColor="?attr/textColor" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_15"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:layout_weight="2"
                    android:src="@drawable/next" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/section_header" />

            <LinearLayout
                android:id="@+id/linear_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/dimen_15">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="@dimen/dimen_20"
                    android:src="@drawable/setting" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="8"
                    android:text="@string/settingG"
                    android:textColor="?attr/textColor" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_15"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:layout_weight="2"
                    android:src="@drawable/next" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/big_line" />

            <!--            <TextView-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="20dp"-->
            <!--                android:layout_marginHorizontal="@dimen/dimen_20"-->
            <!--                android:text="Thông Tin"-->
            <!--                android:textColor="@color/clmain" />-->

            <LinearLayout
                android:id="@+id/linearFeedBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="15dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="@dimen/dimen_20"
                    android:src="@drawable/feedback" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="8"
                    android:text="@string/feedback"
                    android:textColor="?attr/textColor" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_15"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:layout_weight="2"
                    android:src="@drawable/next" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/section_header" />

            <LinearLayout
                android:id="@+id/linearShareApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="15dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="@dimen/dimen_20"
                    android:src="@drawable/share" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="8"
                    android:text="@string/share"
                    android:textColor="?attr/textColor" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_15"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:layout_weight="2"
                    android:src="@drawable/next" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/section_header" />

            <LinearLayout
                android:id="@+id/linearSecurity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="15dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="@dimen/dimen_20"
                    android:src="@drawable/shield" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="8"
                    android:text="@string/security"
                    android:textColor="?attr/textColor" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_15"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:layout_weight="2"
                    android:src="@drawable/next" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/section_header" />

            <LinearLayout
                android:id="@+id/linearAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="15dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="@dimen/dimen_20"
                    android:src="@drawable/man" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="8"
                    android:text="@string/ab"
                    android:textColor="?attr/textColor" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_15"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:layout_weight="2"
                    android:src="@drawable/next" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/section_header" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>